Updated scroll bar css and resolved whitespace display when in mobile landscape view

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -120,6 +120,7 @@
 }
 
 
+
 @media screen and (min-width: 700px){
     .nav-text{
         position: fixed;
@@ -135,7 +136,7 @@
     .mobile-icon-container{
         display: none;
     }
-
+    
     .mobile-menu-container{
         background-color: rgb(0, 0, 0, 0.5);
         width: calc(100% - 186px);
@@ -157,7 +158,11 @@
         transition: none;
         background-color: rgb(0, 0, 0, 0.5);
     }
-
+    
+    .mobile-menu-container .whitespace{
+        display: none;
+    }
+    
     .mobile-menu-items{
         list-style-type: none;
         text-align: center;
